Fixing list text-alignament

--- a/styles/partials/tablet-and-mobile.css
+++ b/styles/partials/tablet-and-mobile.css
@@ -769,6 +769,7 @@
     display: inline-block;
 
     width: 100%;
+    text-align: left;
   }
 
   /* Tab styled list */
